// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info page canvas element  group circle matches snapshot. 1`] = `
<Group>
  <Circle
    fill="#80deea"
    radius={65}
    x={357}
    y={210}
  />
  <Text
    align="center"
    fill="white"
    fontSize={18}
    height={130}
    text="Silicates
group"
    verticalAlign="middle"
    width={130}
    wrap="char"
    x={292}
    y={145}
  />
  <Circle
    className="group"
    fill="#80deea"
    radius={100}
    x={417}
    y={330}
  />
  <Circle
    className="group"
    fill="#ffffff"
    radius={75}
    x={417}
    y={330}
  />
  <Circle
    className="group"
    fillPatternImage="https://crystallizer.s3.eu-west-2.amazonaws.com/yellow.svg"
    fillPatternOffsetX={100}
    fillPatternOffsetY={80}
    fillPatternRepeat="no-repeat"
    fillPatternScaleX={1}
    fillPatternScaleY={1}
    radius={75}
    x={417}
    y={330}
  />
</Group>
`;

exports[`Info page canvas element  group popup matches snapshot. 1`] = `
<Layer>
  <Group>
    <Circle
      className="groupInfo"
      fill="transparent"
      radius={65}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#00ffff"
      strokeWidth={2}
      x={357}
      y={210}
    />
    <Line
      className="groupInfo"
      points={
        Array [
          322,
          350,
          292,
          350,
        ]
      }
      stroke="#80deea"
      strokeWidth={5}
    />
    <Circle
      className="groupInfo"
      fill="transparent"
      radius={100}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#00ffff"
      strokeWidth={2}
      x={417}
      y={330}
    />
    <Rect
      className="groupInfo"
      cornerRadius={6}
      fill="white"
      height={150}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#80deea"
      width={120}
      x={172}
      y={300}
    />
    <Text
      align="center"
      className="groupInfo"
      fontSize={15}
      fontStyle={
        Object {
          "color": "grey",
        }
      }
      height={125}
      text="A mineral group is a set of mineral species with essentially the same crystal structure and composed of chemically similar elements. "
      verticalAlign="middle"
      width={140}
      wrap="word"
      x={182}
      y={310}
    />
  </Group>
</Layer>
`;

exports[`Info page canvas element  specific gravity popup matches snapshot. 1`] = `
<Layer>
  <Group>
    <Line
      className="gravityInfo"
      points={
        Array [
          742,
          90,
          792,
          90,
        ]
      }
      stroke="#80deea"
      strokeWidth={5}
    />
    <Circle
      fill="transparent"
      radius={80}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#00ffff"
      strokeWidth={2}
      x={677}
      y={90}
    />
    <Rect
      className="gravityInfo"
      cornerRadius={6}
      fill="white"
      height={150}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#80deea"
      width={120}
      x={792}
      y={10}
    />
    <Text
      align="center"
      className="gravityInfo"
      fontSize={15}
      fontStyle={
        Object {
          "color": "grey",
        }
      }
      height={125}
      text="Specific Gravity is a measurement that determines the density of minerals. It determines how heavy it is by its relative weight to water. "
      verticalAlign="middle"
      width={130}
      wrap="word"
      x={802}
      y={25}
    />
  </Group>
</Layer>
`;

exports[`Info page canvas element  sub-group popup matches snapshot. 1`] = `
<Layer>
  <Group>
    <Line
      className="subGroupInfo"
      points={
        Array [
          392,
          500,
          342,
          500,
        ]
      }
      stroke="#80deea"
      strokeWidth={5}
    />
    <Circle
      className="subGroupInfo"
      fill="transparent"
      radius={80}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#00ffff"
      strokeWidth={2}
      x={467}
      y={470}
    />
    <Rect
      className="subGroupInfo"
      cornerRadius={6}
      fill="white"
      height={80}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#80deea"
      width={150}
      x={212}
      y={470}
    />
    <Text
      align="center"
      className="subGroupInfo"
      fontSize={15}
      fontStyle={
        Object {
          "color": "grey",
        }
      }
      height={70}
      text="The next level of mineral classification after categorization in groups."
      verticalAlign="middle"
      width={200}
      wrap="word"
      x={212}
      y={470}
    />
  </Group>
</Layer>
`;

exports[`Info page canvas element  systemInfo popup matches snapshot. 1`] = `
<Layer>
  <Group>
    <Line
      className="systemInfo"
      points={
        Array [
          782,
          350,
          812,
          350,
        ]
      }
      stroke="#80deea"
      strokeWidth={5}
    />
    <Circle
      className="systemInfo"
      fill="transparent"
      radius={120}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#00ffff"
      strokeWidth={2}
      x={667}
      y={340}
    />
    <Rect
      className="systemInfo"
      cornerRadius={6}
      fill="white"
      height={150}
      shadowBlur={10}
      shadowColor="#00ffff"
      stroke="#80deea"
      width={110}
      x={812}
      y={290}
    />
    <Text
      align="center"
      className="systemInfo"
      fontSize={15}
      fontStyle={
        Object {
          "color": "grey",
        }
      }
      height={130}
      text="There are six crystal systems. Although you may have seen more than six shapes of crystals, they’re all variations of one of these six habits. "
      verticalAlign="middle"
      width={130}
      wrap="word"
      x={817}
      y={300}
    />
  </Group>
</Layer>
`;
